templates/webapp-authorization-policy.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authz
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            methods:
              - GET
            paths:
              - /metrics
    - from:
        - source:
            requestPrincipals:
              - '*'
      to:
        - operation:
            methods:
              - GET
            paths:
              - /readiness
      when:
        - key: 'request.auth.claims[groups]'
          values:
            - kintsugi-readiness-role
